[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/fondo_opcion_de_epigrafe.png" type="Texture" id=1]
[ext_resource path="res://assets/fuentes/sweet purple.otf" type="DynamicFontData" id=2]
[ext_resource path="res://herramientas/diario/OpcionDeEpigrafe.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 67
font_data = ExtResource( 2 )

[node name="opcion_de_epigrafe" type="MarginContainer"]
margin_top = 8.0
margin_right = 91.0
margin_bottom = 28.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TextureRect" parent="."]
margin_right = 753.0
margin_bottom = 327.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 753.0
margin_bottom = 327.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 753.0
margin_bottom = 116.0
text = "   "
align = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 753.0
margin_bottom = 134.0
text = "   "
align = 1

[node name="Button" type="Button" parent="VBoxContainer"]
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 138.0
margin_right = 753.0
margin_bottom = 224.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
text = "Oda a la uniformidad"
flat = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 141.271, 171.543 )

[connection signal="mouse_entered" from="VBoxContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
